--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": ".\\node_modules\\.bin\\tsc"
   },
   "repository": {
     "type": "git",
